--- a/Project/Home/assets/css/bootstrap-responsive.css
+++ b/Project/Home/assets/css/bootstrap-responsive.css
@@ -1005,7 +1005,7 @@
        -moz-border-radius: 3px;
             border-radius: 3px;
   }
-  .nav-collapse .btn {
+  .nav-collapse .btns {
     padding: 4px 10px 4px;
     font-weight: normal;
     -webkit-border-radius: 4px;
